--- a/www/templates/tab-compose.html
+++ b/www/templates/tab-compose.html
@@ -1,5 +1,5 @@
-<ion-view title="Dashboard">
+<ion-view title="Compose">
   <ion-content class="has-header padding">
-    <h1>Dash</h1>
+    <h1>Compose Korvai</h1>
   </ion-content>
 </ion-view>
