--- a/www/templates/tab-compose.html
+++ b/www/templates/tab-compose.html
@@ -1,5 +1,9 @@
 <ion-view title="Compose">
   <ion-content class="has-header padding">
-    <h1>Compose Korvai</h1>
+    <h1>Compose Korvai</h1><br />
+    <label class="item item-input">
+      <span class="input-label">Write Korvai Here</span>
+      <input type="text">
+    </label>
   </ion-content>
 </ion-view>
