--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,16 +1,23 @@
 <ion-view title="Login">
   <ion-content padding="true" scroll="false">
-    <form ng-submit="login(data)">
-      <label class="item item-input">
-        <input type="text" placeholder="Username" ng-model="data.username">
-      </label>
-      <label class="item item-input">
-        <input type="password" placeholder="Password" ng-model="data.password">
-      </label>
-      <button class="button button-block button-balanced" type="submit">Login</button>
-    </form><br>
+    <div ng-show="user">
+      <h2>You're logged in!</h2>
+      <button class="button button-assertive" ng-click="logout()">Logout</button>
+    </div>
 
-    <button class="button button-positive">Login with Facebook</button><br><br>
-    <a href="/#/register">Don't have an account?</a>
+    <div ng-hide="user">
+      <form ng-submit="login(data)">
+        <label class="item item-input">
+          <input type="text" placeholder="Email" ng-model="data.email">
+        </label>
+        <label class="item item-input">
+          <input type="password" placeholder="Password" ng-model="data.password">
+        </label>
+        <button class="button button-block button-balanced" type="submit">Login</button>
+      </form><br>
+
+      <button class="button button-positive">Login with Facebook</button><br><br>
+      <a href="/#/register">Don't have an account?</a>
+    </div>
   </ion-content>
 </ion-view>
