--- a/www/templates/tabs/korvais.html
+++ b/www/templates/tabs/korvais.html
@@ -1,6 +1,10 @@
 <ion-view title="Korvais">
   <ion-content class="padding">
     <h1>Korvais</h1><hr>
-    <h2 ng-repeat="korvai in korvais">{{ korvai.$id }}: {{ korvai.$value }}</h2>
+    <ion-list>
+      <ion-item ng-repeat="korvai in korvais">
+        {{korvai.$value}}
+      </ion-item>
+    </ion-list>
   </ion-content>
 </ion-view>
