--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -16,7 +16,9 @@
         <button class="button button-block button-balanced" type="submit">Login</button>
       </form><br>
 
-      <button class="button button-positive" ng-click="loginWithFacebook()">Login with Facebook</button><br><br>
+      <h2>Alternatively, log in with...<br>
+      <button class="button button-positive" ng-click="loginWithFacebook()">Facebook</button><br><br>
+      <button class="button button-energized" ng-click="loginWithGoogle()">Google</button><br><br>
       <a href="/#/register">Don't have an account?</a>
     </div>
   </ion-content>
