thalam choice and mod choice works now

--- a/www/templates/tabs/korvais.html
+++ b/www/templates/tabs/korvais.html
@@ -3,7 +3,7 @@
     <h1>Korvais</h1><hr>
     <ion-list>
       <ion-item ng-repeat="korvai in korvais">
-        {{korvai.$value}}
+        {{korvai.content}}
       </ion-item>
     </ion-list>
   </ion-content>
