--- a/www/templates/tabs/compose.html
+++ b/www/templates/tabs/compose.html
@@ -1,8 +1,8 @@
 <ion-view title="Compose">
-  <ion-content class="padding" scroll="true">
+  <ion-content class="padding">
     <form ng-submit="createKorvai(korvai)">
       <label class="item item-input">
-        <textarea ng-model="korvai.content" placeholder="Make your korvai..."></textarea>
+        <textarea ng-model="korvai.content" placeholder="Enter korvai here..."></textarea>
       </label>
 
       <button class="button button-block button-positive" type="submit">I'm done!</button>
@@ -13,32 +13,60 @@
 
     <div class="row">
       <div class="col">
-        <arc-tween val="matras"></arc-tween>
+        <arc-tween width=160 height=160 val="matras" thalam="korvai.thalam" mod="korvai.mod"></arc-tween>
       </div>
 
       <div class="col">
         <div class="list">
           <label class="item item-radio">
-            <input type="radio" name="group" checked>
+            <input type="radio" name="thalam" value=32 ng-model="korvai.thalam">
             <div class="item-content">Adi</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="group">
+            <input type="radio" name="thalam" value=12 ng-model="korvai.thalam">
             <div class="item-content">Rupaka</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="group">
+            <input type="radio" name="thalam" value=14 ng-model="korvai.thalam">
             <div class="item-content">Misra Chapu</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="group">
+            <input type="radio" name="thalam" value=10 ng-model="korvai.thalam">
             <div class="item-content">Kanda Chapu</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </div>
+      </div>
+
+      <div class="col">
+        <div class="list">
+          <label class="item item-radio">
+            <input type="radio" name="mod" value=0 ng-model="korvai.mod">
+            <div class="item-content">None</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+
+          <label class="item item-radio">
+            <input type="radio" name="mod" value=2 ng-model="korvai.mod">
+            <div class="item-content">2 matras after</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+
+          <label class="item item-radio">
+            <input type="radio" name="mod" value=4 ng-model="korvai.mod">
+            <div class="item-content">4 matras after</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+
+          <label class="item item-radio">
+            <input type="radio" name="mod" value=6 ng-model="korvai.mod">
+            <div class="item-content">6 matras after</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
         </div>
