--- a/www/templates/tabs/compose.html
+++ b/www/templates/tabs/compose.html
@@ -2,7 +2,7 @@
   <ion-content class="padding">
     <form ng-submit="createKorvai(korvai)">
       <label class="item item-input">
-        <textarea ng-model="korvai.content" placeholder="Enter korvai here..."></textarea>
+        <textarea textarea-autosize ng-model="korvai.content" placeholder="Enter korvai here..."></textarea>
       </label>
 
       <button class="button button-block button-positive" type="submit">I'm done!</button>
