--- a/www/templates/tabs/account.html
+++ b/www/templates/tabs/account.html
@@ -1,5 +1,8 @@
 <ion-view title="Account">
   <ion-content class="padding">
-    <h1>Account</h1>
+    <h1>Account</h1><hr>
+    <h2>Name:  {{ userProfile.name }}</h2>
+    <h2>Email:  {{ userProfile.email || "DOESN'T EXIST"}}</h2>
+    <h2>Picture:  </h2><img ng-src="{{ userProfile.picture }}" />
   </ion-content>
 </ion-view>
