bug fixes and improvements

--- a/www/components/Compose/composeView.html
+++ b/www/components/Compose/composeView.html
@@ -23,25 +23,25 @@
       <div class="col">
         <div class="list">
           <label class="item item-radio">
-            <input type="radio" name="thalam" value=32 ng-model="korvai.thalam">
+            <input type="radio" name="thalam" value="32" ng-model="korvai.thalam">
             <div class="item-content">Adi</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="thalam" value=12 ng-model="korvai.thalam">
+            <input type="radio" name="thalam" value="12" ng-model="korvai.thalam">
             <div class="item-content">Rupaka</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="thalam" value=14 ng-model="korvai.thalam">
+            <input type="radio" name="thalam" value="14" ng-model="korvai.thalam">
             <div class="item-content">Misra Chapu</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="thalam" value=10 ng-model="korvai.thalam">
+            <input type="radio" name="thalam" value="10" ng-model="korvai.thalam">
             <div class="item-content">Kanda Chapu</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
@@ -51,25 +51,46 @@
       <div class="col">
         <div class="list">
           <label class="item item-radio">
-            <input type="radio" name="mod" value=0 ng-model="korvai.mod">
+            <input type="radio" name="mod" value="0" ng-model="korvai.mod">
             <div class="item-content">None</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="mod" value=2 ng-model="korvai.mod">
+            <input type="radio" name="mod" value="2" ng-model="korvai.mod">
+            <div class="item-content">2 matras before</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+
+          <label class="item item-radio">
+            <input type="radio" name="mod" value="4" ng-model="korvai.mod">
+            <div class="item-content">4 matras before</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+
+          <label class="item item-radio">
+            <input type="radio" name="mod" value="6" ng-model="korvai.mod">
+            <div class="item-content">6 matras before</div>
+            <i class="radio-icon ion-checkmark"></i>
+          </label>
+        </div>
+      </div>
+
+      <div class="col">
+          <label class="item item-radio">
+            <input type="radio" name="mod" value="-2" ng-model="korvai.mod">
             <div class="item-content">2 matras after</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="mod" value=4 ng-model="korvai.mod">
+            <input type="radio" name="mod" value="-4" ng-model="korvai.mod">
             <div class="item-content">4 matras after</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
 
           <label class="item item-radio">
-            <input type="radio" name="mod" value=6 ng-model="korvai.mod">
+            <input type="radio" name="mod" value="-6" ng-model="korvai.mod">
             <div class="item-content">6 matras after</div>
             <i class="radio-icon ion-checkmark"></i>
           </label>
