--- a/www/components/Korvais/korvaisView.html
+++ b/www/components/Korvais/korvaisView.html
@@ -7,7 +7,9 @@
       ng-repeat="korvai in korvais" 
       href="/#/app/korvais/{{ korvai.$id }}"
       on-hold="showActions(korvai)">
-        Korvai #{{ $index + 1 }}:  {{ thalamString(korvai.thalam) + " thalam, " + korvai.mod + " matras after samam" }}
+        Korvai #{{ $index + 1 }}:
+        {{ thalamString(korvai.thalam) }}
+        {{ modString(korvai.mod) }}
       </ion-item>
     </ion-list>
   </ion-content>
