--- a/www/components/Login/registerView.html
+++ b/www/components/Login/registerView.html
@@ -2,23 +2,19 @@
   <ion-content padding="true" scroll="false">
     <form ng-submit="register(data)">
       <label class="item item-input">
-        <input type="text" placeholder="Full Name" autocomplete="on" ng-model="data.name">
+        <input type="text" placeholder="Full Name" ng-model="data.name">
       </label>
 
       <label class="item item-input">
-        <input type="email" placeholder="Email" autocomplete="on" ng-model="data.email">
+        <input type="email" placeholder="Email" ng-model="data.email">
       </label>
 
       <label class="item item-input">
-        <input type="text" placeholder="Username" autocomplete="on" ng-model="data.username">
+        <input type="password" placeholder="Password" ng-model="data.password">
       </label>
 
       <label class="item item-input">
-        <input type="password" placeholder="Password" autocomplete="on" ng-model="data.password">
-      </label>
-
-      <label class="item item-input">
-        <input type="password" placeholder="Confirm Password" autocomplete="on" ng-model="data.password_confirm">
+        <input type="password" placeholder="Confirm Password" ng-model="data.password_confirm">
       </label>
 
       <button class="button button-block button-energized" type="submit">Register</button>
