--- a/www/components/Search/searchView.html
+++ b/www/components/Search/searchView.html
@@ -10,6 +10,9 @@
           Add Friend
         </ion-option-button>
       </ion-item>
-    </ion-list>
+    </ion-list><hr>
+    <div contenteditable class="padding">
+      this should be working right <br> now
+    </div>
   </ion-content>
 </ion-view>
