--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -1,4 +1,4 @@
-$light:                           #ecf0f1 !default;
+$light:                           white !default;
 $stable:                          #95a5a6 !default;
 $positive:                        #3498db !default;
 $calm:                            #1abc9c !default;
@@ -46,6 +46,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 // Include all of Ionic
 @import "www/lib/ionic/scss/ionic";
 
+@import "loginView.scss";
+
 #korvai-view {
   font-family: "Crimson Text", serif;
   font-size: 16pt;
@@ -60,39 +62,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 div[contenteditable] {
   border: 1px solid;
-}
-
-#login-view {
-  background-image: url('../img/mridangam_bg.jpg');
-  background-size: cover;
-
-  .card {
-    padding: 50px;
-    -webkit-box-shadow: 0px 0px 50px 20px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 50px 20px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 50px 20px rgba(0,0,0,0.75);
-    border-radius: 10px;
-    
-    background-color: $dark;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    text-align: center;
-
-    h2 { color: $light; }
-    h4 { color: $grey; }
-
-    button#login-button {
-      padding: 0px 30px;
-    }
-
-    .item-input {
-      border: 1px solid $calm;
-      background-color: lighten($dark, 10%);
-
-      input {
-        color: $light;
-      }
-    }
-  }
 }
