--- a/www/templates/korvaiDetailView.html
+++ b/www/templates/korvaiDetailView.html
@@ -1,6 +1,6 @@
-<ion-view title="Korvai ID: {{ korvai.$id }}">
-  <ion-content class="padding" scroll="true">
+<ion-view title="Korvai">
+  <ion-content id="korvai-detail" class="padding" scroll="true">
     <p>{{ korvai.content }}</p><hr>
-    <div id="korvai-view" ng-bind-html="htmlKorvai"></div>
+    <div id="korvai-content-view" ng-bind-html="htmlKorvai"></div>
   </ion-content>
 </ion-view>
