--- a/scss/loginView.scss
+++ b/scss/loginView.scss
@@ -8,11 +8,12 @@ ion-content#login {
   }
 
   #login-content {
+    padding-top: 50px;
     background: rgba(50, 50, 50, 0.35);
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
     text-align: center;
 
-    h1, h5, input, #or { 
+    h1, h5, input, #or {
       color: white;
     }
 
@@ -25,7 +26,7 @@ ion-content#login {
       background-color: rgba(255, 255, 255, 0);
       border: 0;
 
-      input { 
+      input {
         border-bottom: 1px solid white;
       }
     }
