--- a/www/templates/korvaisView.html
+++ b/www/templates/korvaisView.html
@@ -1,15 +1,29 @@
 <ion-view title="Korvais">
-  <ion-content class="padding">
+  <ion-content class="padding" id="korvais">
     <h1>Korvais</h1><hr>
     <ion-list>
       <ion-item 
-      class="item-remove-animate item-icon-right" 
+      class="card item-remove-animate item-icon-right" 
       ng-repeat="korvai in korvais" 
       href="#/app/korvais/{{ korvai.$id }}"
       on-hold="showActions(korvai)">
-        Korvai #{{ $index + 1 }}:
-        {{ thalamString(korvai.thalam) }}
-        {{ modString(korvai.mod) }}
+        <div class="ribbon-wrapper-green"><div class="ribbon-green">SHARED</div></div>
+        <h2>{{ thalamString(korvai.thalam) }}{{ modString(korvai.mod) }}</h2>
+        <p>Comment #{{ $index + 1 }}, created by user.</p>
+        <div class="row">
+          <div class="col">
+            <h3>4</h3>
+            <p>Avarthanams</p>
+          </div>
+          <div class="col">
+            <h3>6</h3>
+            <p>Aksharams</p>
+          </div>
+          <div class="col">
+            <h3>17</h3>
+            <p>Matras</p>
+          </div>
+        </div>
       </ion-item>
     </ion-list>
   </ion-content>
